<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wanqu Reader</string>
    <string name="app_description">Concerned about the Internet, startup, technology. Push 5 quality articles and reviews every day.</string>
    <string name="app_ad">Stay Focused</string>
    <string name="app_ad_info">By makers, for makers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="alert_dialog_single_choice">Theme List</string>

    <string name="snackbar_star">Star success</string>
    <string name="snackbar_unstar">UnStar success</string>
    <string name="snackbar_close">Close</string>
    <string name="snackbar_search">Please input correct issue number</string>
    <string name="snackbar_no_issue">Couldn\'t find the issue</string>
    <string name="snackbar_no_email_client">Please install email client</string>

    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_issues">Issues</string>

    <string name="nav_header_title">Wanqu Daily</string>
    <string name="nav_header_content">wanqu.co</string>
    <string name="nav_latest">Today\'s Issue</string>
    <string name="nav_likes">Bookmarks</string>
    <string name="nav_sleep_mode">Switch Theme</string>
    <string name="nav_about">About</string>
    <string name="nav_archives">The Front Issues</string>
    <string name="nav_settings">Settings</string>

    <string name="activity_about">About</string>
    <string name="activity_front_issues">The Front Issues</string>
    <string name="activity_starred">Starred</string>

    <string name="button_random">Feeling Lucky</string>
    <string name="progress_view">Loading more</string>

    <!--post-->
    <string name="post_info">%1$s・%2$d min read</string>
    <string name="date_just_now">just now</string>
    <string name="date_minute">%d min ago</string>
    <string name="date_hour">%d hrs ago</string>
    <string name="date_yesterday">yesterday</string>
    <string name="date_day">%d days ago</string>
    <string name="date_month">MMM d</string>
    <string name="date_year">MMM d, yyyy</string>

    <string name="issue_title">%1$s Issue %2$s</string>
</resources>
