<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_latest"
            android:icon="@drawable/ic_menu_home_black_24dp"
            android:title="@string/nav_latest" />
        <item
            android:id="@+id/nav_archives"
            android:icon="@drawable/ic_menu_archive_black_24dp"
            android:title="@string/nav_archives" />
        <item
            android:id="@+id/nav_likes"
            android:icon="@drawable/ic_post_bookmark_black_24dp"
            android:title="@string/nav_likes" />
    </group>

    <item android:title="@string/nav_settings">
        <menu>
            <item
                android:id="@+id/nav_switch"
                android:icon="@drawable/ic_menu_sleep_black_24dp"
                android:title="@string/nav_sleep_mode" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about_black_24dp"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
